--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,50 @@
   "liveServer.settings.port": 5501,
   "editor.linkedEditing": true,
   "cSpell.words": [
+    "ações",
+    "adicionado",
+    "aqui",
+    "arquivo",
+    "Atual",
+    "buscamos",
     "Cadastro",
+    "calendário",
+    "carregar",
+    "caso",
+    "chamada",
+    "chamamos",
     "clicado",
-    "Sala"
+    "Converte",
+    "Cria",
+    "Erro",
+    "Evento",
+    "exista",
+    "existência",
+    "Formatada",
+    "guardamos",
+    "informações",
+    "método",
+    "montar",
+    "necessárias",
+    "objeto",
+    "outra",
+    "outras",
+    "página",
+    "parâmetro",
+    "passar",
+    "pode",
+    "realizar",
+    "Redireciona",
+    "Sala",
+    "seguida",
+    "selecionada",
+    "será",
+    "tela",
+    "teste",
+    "usamos",
+    "usando",
+    "váriavel",
+    "verificar",
+    "Você"
   ]
 }
