--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
     "Atual",
     "buscamos",
     "Cadastro",
+    "calend",
     "calendário",
     "carregar",
     "caso",
@@ -23,9 +24,14 @@
     "existência",
     "Formatada",
     "guardamos",
+    "informa",
     "informações",
+    "João",
+    "Matemática",
     "método",
     "montar",
+    "ncia",
+    "necess",
     "necessárias",
     "objeto",
     "outra",
@@ -36,6 +42,8 @@
     "pode",
     "realizar",
     "Redireciona",
+    "rias",
+    "riavel",
     "Sala",
     "seguida",
     "selecionada",
